# declarepy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: MIGRATION_GUIDE.md
docs/spec/: API_MAPPING.md  PARITY_MATRIX.csv  R_TO_PYTHON_INVENTORY.md  SEMANTIC_DIFFERENCES.md  T3_AGENT_BRIEF.md  TRANSLATION_BUILD_PROMPT.md  TRANSLATION_ROADMAP.md  VALIDATION_REPORT.md
examples/: book_figures.py  quickstart.py
src/declarepy/: __init__.py  _rng.py  course.py  dag.py  data.py  diagnose.py  estimators.py  ra.py  steps.py  viz.py
tests/: conftest.py  test_course_parity.py  test_engine.py  test_estimators_vs_r.py  test_ra.py  test_t2_estimators.py  test_viz.py
validation/: coverage_report.py  extract_rds_reference.R  t1_results.csv  t2_results.csv  t3_results_ch04_05_07.csv  t3_results_ch09.csv  t3_results_ch10_11.csv  t3_results_ch12_13.csv  t3_results_ch15.csv  t3_results_ch16.csv  t3_results_ch17.csv  t3_results_ch18.csv  t3_results_ch19_23.csv  t4_coverage.csv  t4_results_ch21.csv  validate_t1.py  validate_t2.py  validate_t3_ch04_05_07.py  validate_t3_ch09.py  validate_t3_ch10_11.py  validate_t3_ch12_13.py  validate_t3_ch15.py  validate_t3_ch16.py  validate_t3_ch17.py  validate_t3_ch18.py  validate_t3_ch19_23.py  validate_t4_ch21.py
validation/r_scripts/: cluster_reference.R  estimatr_reference.R  logit_reference.R  ps_reference.R  t3_ch04_05_07_reference.R  t3_ch09_reference.R  t3_ch10_11_noise_check.R  t3_ch10_11_reference.R  t3_ch12_13_reference.R  t3_ch15_reference.R  t3_ch16_reference.R  t3_ch17_reference.R  t3_ch18_reference.R  t3_ch19_23_19a_fresh.R  t3_ch19_23_reference.R
validation/reference/: README.md  blocked_fixture.csv  cluster_fixture.csv  cluster_fixture2.csv  diagnosis_10.1.json  diagnosis_10.2.json  diagnosis_10.3.json  diagnosis_10.4.json  diagnosis_10.5.json  diagnosis_10a.json  diagnosis_11.1.json  diagnosis_11.2.json  diagnosis_11.3.json  diagnosis_11.4.json  diagnosis_11.5.json  diagnosis_12.1.json  diagnosis_12.2.json  diagnosis_13.1.json  (+76 more)
(+12 files in other folders)
