[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "declarepy"
version = "0.1.0"
description = "A transparent, tested Python translation of the DeclareDesign / rdss declare-diagnose-redesign research-design engine (MIDA framework)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Davi Moreira", email = "davi.moreira@gmail.com" },
]
keywords = [
  "research-design",
  "DeclareDesign",
  "MIDA",
  "causal-inference",
  "monte-carlo",
  "power-analysis",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "statsmodels>=0.14",
]

[project.optional-dependencies]
dag = ["networkx>=3.0", "matplotlib>=3.7"]
dev = [
  "pytest>=7.0",
  "mypy>=1.0",
  "build",
  "pandas-stubs",
  "networkx>=3.0",
  "matplotlib>=3.7",
  "scikit-learn>=1.3",
]

[project.urls]
Homepage = "https://github.com/davi-moreira/declarepy"
Issues = "https://github.com/davi-moreira/declarepy/issues"
Upstream = "https://declaredesign.org"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
declarepy = ["py.typed", "data/*.csv", "data/README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
files = ["src/declarepy"]
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
  "scipy.*",
  "statsmodels.*",
  "networkx.*",
  "matplotlib.*",
  "sklearn.*",
]
ignore_missing_imports = true
